# mqtt-dashboard

./: .eslintrc.cjs  .gitignore  .tool-versions  Cargo.toml  README.md  commitlint.config.js  ecosystem.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.husky/: pre-commit
application/: .eslintrc.cjs  app.js  codegen.ts  components.json  ecosystem.config.cjs  index.html  package.json  server.js  tailwind.config.js  tsconfig.json  vite.config.ts
application/src/: main.tsx  vite-env.d.ts
application/src/components/charts/: Area.tsx  Line.tsx  helpers.ts  index.ts  styles.ts
application/src/components/other/: MqttControl.tsx  MqttLogs.tsx  Video.tsx  index.tsx
application/src/components/ui/: card.tsx  icon.tsx  loading-spinner.tsx  switch.tsx
application/src/pages/: Dashboard.tsx
application/src/theme/: app.css  colors.ts  index.css  theme_provider.tsx
application/src/types/: components.ts  data.ts  exposes.ts
application/src/utils/: api.ts  mqtt.ts
database/: .env  Cargo.toml  devices.json  mqtt.sqlite  package.json  rustfmt.toml
database/migrations/2024-03-18-191407_devices/: up.sql
database/migrations/2024-03-22-133204_logs/: up.sql
database/src/: context.rs  database.rs  gql.rs  gql_endpoints.rs  gql_schemas.rs  lib.rs  main.rs  models.rs  schema.rs
server/: .eslintrc.cjs  api.js  devices.json  diesel.toml  ecosystem.config.cjs  package.json
server/helpers/: generateMockData.js  mqttLogToJson.js
server/src/: schema.rs
