[package]
name = "mqtt-sqlite"
version = "0.0.1"
description = "Write MQTT messages to SQLite database."
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.0"
actix-cors = "0.7.0"
paho-mqtt = "0.12.3"
diesel = { version = "2.1.5", features = [
    "sqlite",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "serde_json"
] }
dotenv = "0.15.0"
juniper = "0.15.12"
serde_json = "1.0.44"
env_logger = "0.11.1"
serde = "1.0.197"
