[package]
name = "database"
version = "0.0.1"
description = "Database and GraphQL packages of mqtt-dashboard."
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.0"
actix-cors = "0.6.5"
paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
diesel = { version = "2.1.5", features = [
    "sqlite",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "serde_json",
] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
dotenv = "0.15.0"
juniper = "0.15.12"
serde_json = "1.0.44"
env_logger = "0.11.1"
serde = "1.0.197"
diesel_migrations = { version = "2.1.0", default-features = false, features = ["sqlite"] }
